Name:               salvia-sessions
Version:            1.2.0
Description:        Session support for the Salvia webserver.
Synopsis:           Session support for the Salvia webserver.
Cabal-version:      >= 1.6
Category:           Network, Web
License:            BSD3
License-file:       LICENSE
Author:             Sebastiaan Visser, Erik Hesselink
Maintainer:         haskell@fvisser.nl
Build-Type:         Simple

Library
  GHC-Options:      -Wall -fno-warn-orphans
  HS-Source-Dirs:   src

  Build-Depends:    base ==4.*,
                    safe ==0.2.*,
                    fclabels ==0.9.*,
                    pureMD5 >=1.0 && < 1.2,
                    stm ==2.1.*,
                    containers >= 0.2 && < 0.4,
                    random ==1.0.*,
                    time ==1.1.*,
                    utf8-string ==0.3.*,
                    salvia ==1.2.*,
                    salvia-protocol ==1.1.*,
                    transformers < 0.3,
                    monads-fd < 0.2

  Exposed-modules:  Network.Salvia.Handler.Login
                    Network.Salvia.Handler.Session

